垃圾收集器与内存分配策略